# chablo

./: .firebaserc  .gitignore  Cargo.toml  README.md
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase.yml  lint.yml  minimal-versions.yml  test.yml
crates/mime_guess_patched/: Cargo.toml
crates/mime_guess_patched/.github/workflows/: rust.yml
crates/mime_guess_patched/src/: lib.rs
diary/: 2022_05_05_deployed.md  2022_05_08.md  start_creating_blog_system.md
diary/2022/05/: 06.md  07.md  09.md  10.md  11.md  14.md  16.md  19.md  25.md  29.md  31.md
diary/2022/06/: 01.md  05.md  06.md  07.md  08.md  11.md  12.md  18.md  21.md
diary/2022/07/: 03.md
diary/2022/12/: 14.md
diary/2023/01/: 07.md  10.md
diary/2023/03/: 30.md
diary/2023/04/: 07.md
diary/2023/10/: 07.md
scripts/: diary
src/: builder.rs  cli.rs  errors.rs  generator.rs  lib.rs  main.rs  models.rs  parser.rs  server.rs  writer.rs
templates/: article.html  layout.html  toppage.html
tests/: test_chablo.rs
tests/fixtures/: test.md
