[package]
name = "chablo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.12.0"
anyhow = "1.0.75"
thiserror = "1.0.58"
clap = { version = "4.5.4", features = ["derive", "wrap_help"]  }
askama = "0.12"
chrono = { version = "0.4.31", features = ["serde"]  }
glob = "0.3.1"
regex = "1"
log = "0.4.20"
env_logger = "0.11.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
insta = "1.34.0"
assert_cmd = "2.0.12"
predicates = "3.0.4"

[[bin]]
bench = false
path = "src/main.rs"
name = "chablo"
