[package]
name = "chablo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.13.0"
anyhow = "1.0.75"
thiserror = "2.0.0"
clap = { version = "4.5.4", features = ["derive", "wrap_help"]  }
askama = "0.15"
chrono = { version = "0.4.31", features = ["serde"]  }
glob = "0.3.1"
regex = "1"
log = "0.4.20"
env_logger = "0.11.0"
# Minimal version resolution pulls in very old transitive crates.  Add
# direct dependencies to force modern releases that still satisfy the
# transitive semver constraints.
getopts = "0.2.21"
mime_guess = "2.0.5"
mime = "0.3.17"

[patch.crates-io]
mime_guess = { path = "crates/mime_guess_patched" }

[dev-dependencies]
pretty_assertions = "1.4.0"
insta = "1.34.0"
assert_cmd = "2.0.12"
predicates = "3.0.4"

[[bin]]
bench = false
path = "src/main.rs"
name = "chablo"
